--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -62,7 +62,8 @@ main {
       input {
         height: 3.125rem;
         border: 1px solid #a8a8b3;
-        border-radius: 0.25rem; 
+        border-radius: 0.5rem;
+        padding: 1rem;
       }
 
       button {
@@ -72,6 +73,22 @@ main {
       button, input {
         width: 100%;
       }
+    }
+
+    p {
+      font-size: 0.875rem;
+      color: #737380;
+      margin-top: 1rem;
+    }
+
+    a {
+      color: #e559f9;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin: 4rem 0 1.5rem;
+      font-family: 'Poppins', sans-serif ;
     }
 }
 
